@@ -330,6 +330,12 @@
 				RelativePath="..\..\src\validator\L2v3CompatibilityValidator.cpp">
 			</File>
 			<File
+				RelativePath="..\..\src\validator\constraints\L2v4CompatibilityConstraints.cpp">
+			</File>
+			<File
+				RelativePath="..\..\src\validator\L2v4CompatibilityValidator.cpp">
+			</File>
+			<File
 				RelativePath="..\..\src\validator\constraints\LambdaMathCheck.cpp">
 			</File>
 			<File
@@ -794,6 +800,9 @@
 			</File>
 			<File
 				RelativePath="..\..\src\validator\L2v3CompatibilityValidator.h">
+			</File>
+			<File
+				RelativePath="..\..\src\validator\L2v4CompatibilityValidator.h">
 			</File>
 			<File
 				RelativePath="..\..\src\validator\constraints\LambdaMathCheck.h">
