@@ -455,6 +455,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\validator\constraints\L2v4CompatibilityConstraints.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\validator\L2v4CompatibilityValidator.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\validator\constraints\LambdaMathCheck.cpp"
 				>
 			</File>
@@ -1048,6 +1056,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\validator\L2v3CompatibilityValidator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\validator\L2v4CompatibilityValidator.h"
 				>
 			</File>
 			<File
